# Weather_Api

./: .gitignore  Cargo.toml  db.config
api/: Cargo.toml
api/src/: lib.rs
api/src/weather/: main.rs
src/: lib.rs  main.rs
src/dependencies/: builder.rs
src/error/: weather_error.rs
src/input/: command_line.rs
src/service/: mod.rs  sender.rs
src/service/providers/: mod.rs  open_weather.rs  weather_a.rs
src/storage/: db.rs  mod.rs  repository.rs  sql_storage.rs
src/utils/: types.rs
src/weather/: main.rs
