[package]
name = "weather_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Ser/Des
serde = "1.0.2"
serde_json = "1.0.85"

async-trait = "0.1.57"

#weather_traits
api = { path = "./api" }

#REST
reqwest = { version = "0.11.11", features = ["blocking"] }

#DB
sqlite = "0.27.0"
